# CorelabVerilog

./: BBCDFG.cpp  BBCDFG.h  BitWidthTable.cpp  BitWidthTable.h  CMakeLists.txt  CallTable.cpp  CallTable.h  CorelabVerilog.h  CorelabVerilogPass.cpp  CorelabVerilogPass.h  CorelabVerilogTargetMachine.cpp  CorelabVerilogTargetMachine.h  FSM.cpp  FSM.h  GetDataLayout.cpp  GetDataLayout.h  GetMemOper.cpp  GetMemOper.h  GetSize.cpp  GetSize.h  LLVMBuild.txt  LoopPatternAnal.cpp  LoopPatternAnal.h  Makefile  MemoryTable.cpp  MemoryTable.h  NLT.cpp  NLT.h  OperatorTable.cpp  OperatorTable.h  PABasedAA.cpp  PABasedAA.h  PABuilder.cpp  PABuilder.h  PointerAnalysis.cpp  PointerAnalysis.h  PrintVerilog.cpp  PrintVerilog.h  PrintVerilogMemory.cpp  README.md  (+4 more)
MCTargetDesc/: CMakeLists.txt  CorelabVerilogMCAsmInfo.cpp  CorelabVerilogMCAsmInfo.h  CorelabVerilogMCTargetDesc.cpp  CorelabVerilogMCTargetDesc.h  LLVMBuild.txt
TargetInfo/: CMakeLists.txt  CorelabVerilogTargetInfo.cpp  LLVMBuild.txt  Makefile
